# docs/swagger.yaml
@@ -1,27 +1,10 @@
 basePath: /api/v1
 definitions:
-  food.FoodDetails:
-    properties:
-      canteen_name:
-        type: string
-      ingredient:
-        type: string
-      introduction:
-        type: string
-      name:
-        type: string
-      picture_url:
-        type: string
-      resaurant_name:
-        type: string
-      storey:
-        type: integer
-    type: object
   food.FoodList:
     properties:
       food_list:
         items:
-          $ref: '#/definitions/food.FoodDetails'
+          $ref: '#/definitions/service.FoodDetailsForRecommend'
         type: array
     type: object
   model.Menu:
@@ -46,21 +29,6 @@ definitions:
       picture_url:
         type: string
     type: object
-  restaurant.RandomRestaurant:
-    properties:
-      average_price:
-        type: number
-      canteen_name:
-        type: string
-      picture_url:
-        type: string
-      recommendation:
-        type: string
-      restaurant_name:
-        type: string
-      storey:
-        type: integer
-    type: object
   restaurant.ResaurantListResponse:
     properties:
       restaurants:
@@ -81,6 +49,38 @@ definitions:
         items:
           $ref: '#/definitions/service.SearchRestaurantModel'
         type: array
+    type: object
+  service.FoodDetailsForRecommend:
+    properties:
+      canteen_name:
+        type: string
+      ingredient:
+        type: string
+      introduction:
+        type: string
+      name:
+        type: string
+      picture_url:
+        type: string
+      resaurant_name:
+        type: string
+      storey:
+        type: integer
+    type: object
+  service.RandomRestaurant:
+    properties:
+      average_price:
+        type: number
+      canteen_name:
+        type: string
+      picture_url:
+        type: string
+      recommendation:
+        type: string
+      restaurant_name:
+        type: string
+      storey:
+        type: integer
     type: object
   service.RestaurantForCanteen:
     properties:
@@ -191,11 +191,10 @@ paths:
         required: true
         type: integer
       - description: 按照id来给,食堂信息，哪个食堂，楼层
-        in: body
-        name: canteen
+        in: query
+        name: c
         required: true
-        schema:
-          type: integer
+        type: integer
       produces:
       - application/json
       responses:
@@ -224,7 +223,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/restaurant.RandomRestaurant'
+            $ref: '#/definitions/service.RandomRestaurant'
       summary: 美食首页
       tags:
       - restaurant
